[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/todot/assets/MoveUp.svg" type="Texture" id=1]
[ext_resource path="res://addons/todot/assets/Remove.svg" type="Texture" id=2]
[ext_resource path="res://addons/todot/assets/ArrowUp.svg" type="Texture" id=3]
[ext_resource path="res://addons/todot/TaskItem.gd" type="Script" id=4]
[ext_resource path="res://addons/todot/assets/CurveConstant.svg" type="Texture" id=5]
[ext_resource path="res://addons/todot/assets/ArrowDown.svg" type="Texture" id=6]
[ext_resource path="res://addons/todot/assets/MoveDown.svg" type="Texture" id=7]

[node name="Task" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 24.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="MenuButton" parent="."]
margin_right = 24.0
margin_bottom = 24.0
focus_mode = 2
icon = ExtResource( 5 )
items = [ "Move Up", ExtResource( 3 ), 0, false, false, 0, 0, null, "", false, "Move Down", ExtResource( 6 ), 0, false, false, 1, 0, null, "", false, "Move to Top", ExtResource( 1 ), 0, false, false, 2, 0, null, "", false, "Move to Bottom", ExtResource( 7 ), 0, false, false, 3, 0, null, "", false, "Delete", ExtResource( 2 ), 0, false, false, 4, 0, null, "", false ]

[node name="TaskText" type="LineEdit" parent="."]
margin_left = 28.0
margin_right = 322.0
margin_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Completed" type="CheckBox" parent="."]
margin_left = 326.0
margin_right = 350.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="TaskText" to="." method="_on_TaskText_text_changed"]
[connection signal="toggled" from="Completed" to="." method="_on_Completed_toggled"]
